--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,3 @@
-/* Add styles for the new card components */
-
 .card {
   width: 100%;
   padding: 20px;
@@ -21,7 +19,6 @@
 .articleCardContent {
   position: relative;
   overflow: hidden;
-  /* border: 1px solid #ddd; */
   border-radius: 5px;
 }
 
@@ -38,13 +35,12 @@
 }
 
 .articleContent {
-  padding: 20px;
-  /* border: 1px solid red; */
+  padding-top: 10px;
 }
 
 .readMoreButton {
   position: absolute;
-  bottom: 20px;
+  bottom: 0px;
   right: 10px;
   padding: 10px;
   background: var(--blue-button);
@@ -59,5 +55,3 @@
   font-size: 12px;
   color: var(--white);
 }
-
-/* Add media queries for responsive adjustments if needed */
