--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -55,6 +55,14 @@
   cursor: pointer;
 }
 
+.uploadButton {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
 .blogFormContainer {
   max-width: 600px;
   margin: auto;
@@ -91,6 +99,51 @@
   height: 500px;
   object-fit: cover;
   object-position: center;
+}
+/* Video CSS */
+
+.coverImage {
+  width: 100%;
+  height: 500px;
+  position: relative;
+  object-fit: cover;
+  object-position: center;
+}
+
+.playButtonOverlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+}
+
+.playButtonIcon {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.7);
+  clip-path: polygon(0% 0%, 100% 50%, 0% 100%);
+  position: relative;
+}
+
+.playButtonIcon::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 0 15px 30px;
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.9);
+}
+/* End */
+
+.modalVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the video covers the entire container */
 }
 
 .blogContent {
