--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,10 +1,13 @@
 .card {
   width: 100%;
   padding: 20px;
-  border: 2px solid var(--grey-900);
   border-radius: 5px;
-  background-color: var(--grey-500);
-  font-family: monospace;
+  border: 2px solid var(--grey-100);
+  background-color: var(--grey-200);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .articleCard {
@@ -30,28 +33,30 @@
 
 .articleCoverImage {
   width: 100%;
-  height: 200px; /* Adjust height as needed */
+  height: 200px; /* Adjust cover height as needed */
   object-fit: cover;
 }
 
 .articleContent {
   padding-top: 10px;
+  color: var(--grey-900);
 }
 
 .readMoreButton {
-  position: absolute;
   bottom: 0px;
   right: 10px;
   padding: 10px;
-  background: var(--blue-button);
-  color: var(--white);
   border: none;
-  border-radius: 5px;
   cursor: pointer;
+  border-radius: 5px;
+  position: absolute;
+  color: var(--blue-100);
+  background: var(--blue-900);
 }
 
 .authorDetails {
   margin-top: 10px;
   font-size: 12px;
-  color: var(--white);
+  font-weight: bold;
+  color: var(--red-900);
 }
