--- a/src/components/CommentBox/CommentBox.module.css
+++ b/src/components/CommentBox/CommentBox.module.css
@@ -1,8 +1,10 @@
 .commentBox {
-  border-top: 1px solid var(--grey-900);
+  padding: 10px;
   display: flex;
   margin-top: 20px;
-  padding-top: 20px;
+  border-radius: 5px;
+  background-color: var(--blue-100);
+  border: 2px solid var(--blue-500);
 }
 
 .avatar {
@@ -20,6 +22,7 @@
   width: 100%;
   padding: 8px;
   resize: vertical;
+  border-radius: 5px;
 }
 
 .postButton {
@@ -29,9 +32,6 @@
   padding: 8px 15px;
   cursor: pointer;
   margin-top: 5px;
-}
-
-.blueBtn {
-  background-color: var(--blue-button);
-  color: var(--white);
+  color: var(--blue-100);
+  background-color: var(--blue-900);
 }
