--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -1,35 +1,42 @@
 .commentsContainer {
-  border-top: 1px solid var(--grey-900);
   margin-top: 20px;
+  border-top: 1px solid var(--grey-900);
 }
 
 .comment {
   display: flex;
-  margin-bottom: 20px;
-  padding: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: var(--green-100);
 }
 
 .title {
   font-size: 1.3em;
   font-weight: bold;
+  color: var(--grey-900);
 }
 
 .avatar {
-  min-width: 50px;
   width: 50px;
   height: 50px;
+  min-width: 50px;
   border-radius: 50%;
   margin-right: 10px;
 }
 
 .commentAuthor {
   font-weight: bold;
+  color: var(--grey-700);
 }
 
 .commentText {
   margin-bottom: 5px;
+  color: var(--grey-900);
 }
 
 .commentDate {
+  font-size: 0.8em;
   font-style: italic;
+  color: var(--grey-800);
 }
