--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -4,19 +4,19 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .modalContent {
   width: 70%;
+  padding: 20px;
   max-height: 90vh;
   overflow: hidden;
-  background-color: white; /* Customize the background color */
-  padding: 20px; /* Customize the padding */
-  border-radius: 8px; /* Customize the border radius */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a box shadow for depth */
+  border-radius: 8px;
+  background-color: var(--grey-100);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
