--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,23 +1,55 @@
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 20px;
+}
+
 .navigation {
   display: flex;
   justify-content: space-between;
   padding: 1rem;
-  background-color: var(--grey-500);
-  border-bottom: 2px solid var(--grey-900);
+  background-color: var(--grey-200);
+  border-left: 2px solid var(--grey-700);
+  border-right: 2px solid var(--grey-700);
+  border-bottom: 2px solid var(--grey-700);
+  border-radius: 0 0 5px 5px;
 }
 
 .left {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 .right {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 .link {
-  margin-right: 1rem;
   text-decoration: none;
   color: var(--grey-900);
+  font-weight: bold;
+  border: 1px solid var(--grey-700);
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.activeLink {
+  background-color: var(--grey-700);
+  color: var(--grey-100);
+}
+
+/* Media query for screens up to 1199px (tablet and below) */
+@media only screen and (max-width: 1199px) {
+  .container {
+    width: 100%;
+    padding: 0;
+  }
+  .navigation {
+    border-left: none;
+    border-right: none;
+    border-radius: 0;
+  }
 }
