--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 body {
-  background: #bcaaa4;
+  background: #fff59d;
+  font-family: monospace;
 }
 
 .middleContainer {
@@ -11,40 +12,23 @@ body {
 }
 
 :root {
-  --grey-500: #9e9e9e;
+  --grey-100: #f5f5f5;
   --grey-200: #eeeeee;
+  --grey-400: #bdbdbd;
+  --grey-500: #9e9e9e;
+  --grey-700: #616161;
+  --grey-800: #424242;
   --grey-900: #212121;
-  --blue-button: #2196f3;
-  --green-button: #4caf50;
-  --white: #ffffff;
+  --blue-100: #bbdefb;
+  --blue-500: #2196f3;
+  --blue-900: #0d47a1;
+  --green-100: #c8e6c9;
+  --green-500: #4caf50;
+  --green-900: #1b5e20;
+  --red-100: #ffcdd2;
+  --red-500: #f44336;
+  --red-900: #b71c1c;
+  --yellow-100: #fff9c4;
+  --yellow-500: #ffeb3b;
+  --yellow-900: #f57f17;
 }
-
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-} */
